fixed scrollbar issue and allowed scrolling to work in text area

--- a/src/components/ScrollBar.css
+++ b/src/components/ScrollBar.css
@@ -1,19 +1,25 @@
 #scroll-bar-margin {
-    margin-top: 1px;
-    margin-bottom: 1px;
+    position: absolute;
+    right: 23px;
+    box-sizing: border-box;
+    height: calc(100% - 4px);
 }
 
 #scroll-bar-container {
+    /* height: calc(100% - 30px); */
+    height: 100%;
+    margin-top: 2px;
+    position: absolute;
     box-sizing: border-box;
     width: 22px;
-    height: 100%;
     background-color: #fcfcfc;
     background-image: linear-gradient(45deg, #d5d5d5 25%, transparent 25%), linear-gradient(-45deg, #d5d5d5 25%, transparent 25%), linear-gradient(45deg, transparent 75%, #d5d5d5 75%), linear-gradient(-45deg, transparent 75%, #d5d5d5 75%);
     background-size: 2px 2px;
 }
 
 #scroll-bar-thumb {
-    border: 1px solid red;
+    position: relative;
+    /* border: 1px solid red; */
     width: 100%;
     height: 20px;
     box-sizing: border-box;
