--- a/src/components/TextEditor.css
+++ b/src/components/TextEditor.css
@@ -11,12 +11,14 @@
 #text-body-container {
     height: 100%;
     width: 100%;
+    position: relative;
     box-sizing: border-box;
     border-top: 1px solid rgba(139,139,139,255);
     border-left: 1px solid rgba(139,139,139,255);
     border-right: 1px solid rgba(246,246,246,255);
     border-bottom: 1px solid rgba(246,246,246,255);
     font-family: 'MS-Sans-Serif-Bold';
+    /* justify-content: end; */
     display: flex;
 }
 
@@ -32,8 +34,12 @@
     border-right: 1px solid rgba(166,166,166,255);
     border-bottom: 1px solid rgba(166,166,166,255);
     background-color: rgba(255, 255, 255, 0.897);
+    scrollbar-width: none;
     overflow-y: scroll;
+}
 
+#text-container {
+    margin-right: 22px;
 }
 
 .project-title {
