--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,7 @@ body {
   font-family: 'MS-Sans-Serif-Bold';
   src: local('MS-Sans-Serif-Bold'), url(./assets/fonts/ms-sans-serif-b.ttf) format('truetype');
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
